--- a/brafood/package.json
+++ b/brafood/package.json
@@ -1,6 +1,7 @@
 {
   "name": "brafood",
   "version": "0.1.0",
+  "homepage": "./",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
